--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\_Scripts\AttackCamera.cs" />
+     <Compile Include="Assets\_Scripts\AttackShip.cs" />
+     <Compile Include="Assets\_Scripts\Explodable.cs" />
+     <Compile Include="Assets\_Scripts\Meteor.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
