--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,8 @@
      <Compile Include="Assets\_Scripts\Explodable.cs" />
      <Compile Include="Assets\_Scripts\Exploder.cs" />
      <Compile Include="Assets\_Scripts\Meteor.cs" />
+     <Compile Include="Assets\_Scripts\MeteorSpawner.cs" />
+     <Compile Include="Assets\_Scripts\Ship.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
